CRUDpractice/src/main/java/org/example/crudpractice/global/error/ErrorResponse.java
package org.example.crudpractice.global.error;

public class ErrorResponse {
}
